# ami-course-recommender

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  WRITEUP.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  task.txt
ami_course_recommendations/: apps.py  auth_views.py  chat_view.py  models.py  urls.py  views.py
ami_course_recommendations/migrations/: 0001_initial.py
ami_engine/: asgi.py  settings.py  urls.py  wsgi.py
datagen/: generate.py
engine/: coldstart.py  explainer.py  filters.py  llm.py  scorers.py
sample_outputs/: cold_start_user.json  heavy_usage_user.json  in_between_user.json
scripts/: debug_usr25.py  find_sample_users.py  sample_users.py
tests/: __init__.py  test_api.py  test_auth.py  test_coldstart.py  test_datagen.py  test_explainer.py  test_filters.py  test_scorers.py
ui/: ami-logo.avif  index.html  login.html
