[project]
name = "ami-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "djangorestframework>=3.17.1",
    "faker>=40.32.0",
    "groq>=1.5.0",
    "gunicorn>=26.0.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[tool.uv]
dev-dependencies = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.22",
]
